--- a/client/src/components/profile/ProfileBox.module.scss
+++ b/client/src/components/profile/ProfileBox.module.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.RightColumn {
+  overflow: hidden;
+}
+
 .ProfileButton {
   width: 100%;
   border-radius: 0;
